--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rollup -c && tsc --emitDeclarationOnly",
     "dev": "rollup -c --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "react",
@@ -22,20 +23,22 @@
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "devDependencies": {
-    "@types/node": "^24.2.1",
-    "@types/react": "^18.0.0",
+  "dependencies": {
     "typescript": "^5.0.0",
     "rollup": "^4.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "tslib": "^2.6.0"
   },
+  "devDependencies": {
+    "@types/node": "^24.2.1",
+    "@types/react": "^18.0.0"
+  },
   "files": [
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/livei18n/sdk"
+    "url": "https://github.com/LiveI18n/react-sdk"
   }
 }
