--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^24.2.1",
     "@types/react": "^18.0.0",
-    "typescript": "^5.0.0",
     "rollup": "^4.0.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "tslib": "^2.6.0"
+    "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.6.0",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist"
